2006-11-02  Quentin Mathe <qmathe@club-internet.fr>

	* Source/IKIconProvider.m:
	* Source/NSFileManager+IconKit.m:
	* Source/IKApplicationIconProvider.m:
	* Source/GNUmakefile:
	Got of rid of all the remaining warnings except two. Declared HAVE_UKTEST 
	to put test methods between conditional directives based on this define.

2006-10-29  Quentin Mathe <qmathe@club-internet.fr>

	* Source/GNUmakefile:
	* Source/IKIcon.m:
	* Source/IKCompositor.m:
	* Headers/IKIcon.h:
	* Headers/IKIconPositions.h:
	Shut down various compiler warnings and replaced include statements by 
	import ones. truncf is now used through GCC equivalent builtin function.

2006-09-27  Quentin Mathe <qmathe@club-internet.fr>
    
    * GNUmakefile: Updated to include etoile.make.

2005-06-14  Quentin Mathe <qmathe@club-internet.fr>
    
    WARNING: many tests fail
    * Source/GNUmakefile: Updated to include correctly GNUmakefile.preamble and
    GNUmakefile.postamble.

2005-06-14  Quentin Mathe <qmathe@club-internet.fr>
    
    WARNING: many tests fail
    * GNUmakefile.postamble:
    * GNUmakefile.preamble:
    Added (in order to allow compilation with 'make test=yes' from parent
    directories when UnitKit isn't already installed).
    * GNUmakefile: Updated to include GNUmakefile.preamble and
    GNUmakefile.postamble.

2005-05-15  Quentin Mathe <qmathe@club-internet.fr>
    
    WARNING: many tests fail
    * Source/GNUmakefile: Updated to support UnitKit in order to produce tests
    bundle.
    * Headers/IKApplicationIconProvider.h: Adopted UKTest protocol to support 
    UnitKit.
    (-invalidCache): Renamed -invalidateCache.
    (-invalidCacheAll): Renamed -invalidateCacheAll.
    * Source/IKApplicationIconProvider.m:
    Added macros DOCUMENT_PATH_COMPONENT and PLUGIN_PATH_COMPONENT for path 
    components used in a recurrent way.	Fixed 'invalid' term incorrect use in 
    method names when 'invalidate' should be used.
    (-initWithBundlePath:): Raise needed exceptions.