@@ -1,3 +1,9 @@
+2006-11-25  Quentin Mathe <qmathe@club-internet.fr>
+
+	* Source/IKThumbnailProvider.m: Removed all PNG writing code since similar 
+	code is now part of gnustep-gui. Shut down every warnings.
+	* Source/GNUmakefile: Updated to include IKThumbnailProvider in the build.
+
 2006-11-02  Quentin Mathe <qmathe@club-internet.fr>
 
 	* Source/IKIconProvider.m:
